# django-accordbox

./: README.md  pyproject.toml
djaccord/: manage.py
djaccord/djaccord/: asgi.py  settings.py  urls.py  wsgi.py
djaccord/frontend/: package-lock.json  package.json
djaccord/templates/: index.html
